--- a/integration-tests/build.gradle
+++ b/integration-tests/build.gradle
@@ -1,5 +1,10 @@
 apply plugin: 'java'
 
+repositories {
+    mavenCentral()
+    jcenter()
+}
+
 dependencies {
     compile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
     compile group: 'io.rest-assured', name: 'rest-assured', version: '3.0.7'
