--- a/src/main/docker/Dockerfile.ubuntu
+++ b/src/main/docker/Dockerfile.ubuntu
@@ -39,8 +39,10 @@ RUN     apt-get update && \
         xmlstarlet edit --inplace \
             --var valve "/Server/Service[@name='Catalina']/Engine[@name='Catalina']/Host/Valve[@className='org.apache.catalina.valves.AccessLogValve']/@pattern" \
               --update '$valve' --value "%h %l %u %t &quot;%r&quot; %s %b %D %F" \
-            --var valve "/Server/Service[@name='Catalina']/Engine[@name='Catalina']/Host/Valve[@className='org.apache.catalina.valves.AccessLogValve']" \
-            --append '$valve' --type elem --name Valve \
+            --var valve "/Server/Service[@name='Catalina']/Engine[@name='Catalina']/Host/Valve[@className='org.apache.catalina.valves.AccessLogValve']" \	      
+              --insert '$valve' --type attr --name rotatable --value \$\{TOMCAT_ACCESS_LOGS_ROTATABLE\} \
+              --insert '$valve' --type attr --name maxDays --value \$\{TOMCAT_ACCESS_LOGS_MAX_DAYS\} \
+              --append '$valve' --type elem --name Valve \
                 --var valve '$prev' \
                 --insert '$valve' --type attr --name className --value org.apache.catalina.valves.RemoteIpValve \
                 --insert '$valve' --type attr --name remoteIpHeader --value x-forwarded-for \
