--- a/integration-tests/src/main/compose/docker-compose.yml
+++ b/integration-tests/src/main/compose/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     - jdbc-driver
 
   jdbc-driver:
-    image: hub.xenit.eu/jdbc-mysql:5.1.42
+    image: docker.io/xenit/jdbc-mysql:5.1.42
     volumes:
     - jdbc:/jdbc/
 
