DOCKER-291 Tomcat 8.5.49 for Alfresco 6, include alfresco-6.2-ubuntu tag

--- a/tomcat-8.5/jdk-11-ubuntu-18.04.gradle
+++ b/tomcat-8.5/jdk-11-ubuntu-18.04.gradle
@@ -3,7 +3,7 @@ ext {
             version: [
                     major: 8,
                     minor: 5,
-                    rev: 42,
+                    rev: 49,
                     canonical: true
             ]
     ]
@@ -20,5 +20,5 @@ ext {
             version: '18.04',
             name: 'bionic'
     ]
-    extraTags = [ "alfresco-6.0-ubuntu", "alfresco-6.1-ubuntu" ]
+    extraTags = [ "alfresco-6.0-ubuntu", "alfresco-6.1-ubuntu", "alfresco-6.2-ubuntu" ]
 }
