--- a/src/main/docker/Dockerfile.centos
+++ b/src/main/docker/Dockerfile.centos
@@ -70,6 +70,7 @@ RUN     env && \
             --insert '$connector' --type attr --name maxThreads --value \$\{TOMCAT_MAX_THREADS\} \
             --insert '$connector' --type attr --name maxHttpHeaderSize --value \$\{TOMCAT_MAX_HTTP_HEADER_SIZE\} \
             --insert '$connector' --type attr --name relaxedQueryChars --value \$\{TOMCAT_RELAXED_QUERY_CHARS\} \
+            --insert '$connector' --type attr --name relaxedPathChars --value \$\{TOMCAT_RELAXED_PATH_CHARS\} \
         --var connector "/Server/Service[@name='Catalina']/Connector[@protocol=\"HTTP/1.1\"]/@redirectPort" \
             --update '$connector' --value \$\{TOMCAT_PORT_SSL\} \
         --var connector "/Server/Service[@name='Catalina']/Connector[@protocol=\"HTTP/1.1\"]" \
@@ -77,6 +78,7 @@ RUN     env && \
             --append '$connector' --type attr --name maxThreads --value \$\{TOMCAT_MAX_THREADS\} \
             --append '$connector' --type attr --name maxHttpHeaderSize --value \$\{TOMCAT_MAX_HTTP_HEADER_SIZE\} \
             --append '$connector' --type attr --name relaxedQueryChars --value \$\{TOMCAT_RELAXED_QUERY_CHARS\} \
+            --append '$connector' --type attr --name relaxedPathChars --value \$\{TOMCAT_RELAXED_PATH_CHARS\} \
         --var connector "/Server/Service[@name='Catalina']/Connector[@protocol=\"AJP/1.3\"]/@port" \
             --update '$connector' --value \$\{TOMCAT_AJP_PORT\} \
             --insert '$connector' --type attr --name URIEncoding --value UTF-8 \
