--- a/integration-tests/build.gradle
+++ b/integration-tests/build.gradle
@@ -6,7 +6,7 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
-    compile group: 'io.rest-assured', name: 'rest-assured', version: '3.0.7'
-    compile group: 'junit', name: 'junit', version: '4.12'
+    implementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+    implementation group: 'io.rest-assured', name: 'rest-assured', version: '3.0.7'
+    implementation group: 'junit', name: 'junit', version: '4.12'
 }
