--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'eu.xenit.docker' version '5.0.5' apply false
-    id 'eu.xenit.docker-compose' version '5.0.5' apply false
+    id 'eu.xenit.docker' version '5.1.0' apply false
+    id 'eu.xenit.docker-compose' version '5.1.0' apply false
 }
 
 repositories {
@@ -93,15 +93,10 @@ configure(subprojects.findAll { it.name.startsWith("tomcat-") }) {
 
     buildDockerImage.dependsOn(copyDocker)
 
-    dockerFile {
+    dockerBuild {
         dockerFile = file("${project.buildDir}/docker/Dockerfile")
-        dockerBuild {
-            repository = 'docker.io/xenit/tomcat'
-            //tags = calcTags(project.ext.tomcat, project.ext.java, project.ext.os, project.hasProperty('extraTags') ? project.extraTags : [])
-            tags = calcTags(project).collect()
-            pull = true
-            automaticTags = false
-        }
+        repositories = ['docker.io/xenit/tomcat']
+        tags = calcTags(project).collect()
     }
 
     buildDockerImage {
