I-16: Remove timestamp suffix from tags

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import java.text.SimpleDateFormat
-
 plugins {
     id 'eu.xenit.docker' version '5.1.1' apply false
     id 'eu.xenit.docker-compose' version '5.1.1' apply false
@@ -24,16 +22,6 @@ String getTagQualifier(String branchName) {
     }
 
     return '-' + branchName.split('/').last() + '-SNAPSHOT'
-}
-
-String getBuildTime(String branchName) {
-    def dateFormatPattern = "-yyyyMMdd"
-    if (!branchName.endsWith('release')) {
-        dateFormatPattern += ".HHmm"
-    }
-    def df = new SimpleDateFormat(dateFormatPattern)
-    df.setTimeZone(TimeZone.getTimeZone("UTC"))
-    return df.format(new Date())
 }
 
 String[] calcTags(Project project) {
@@ -71,17 +59,8 @@ String[] calcTags(Project project) {
     }
 
     def allTags = tags.unique()
-
-    def branchName = getBranchName(project)
-    def tagQualifier = getTagQualifier(branchName)
-    def buildTime = getBuildTime(branchName)
-    def tagsWithQualifier = allTags.collect { it + "${tagQualifier}" }
-    def timestampedTagsWithQualifier = allTags.collect { it + "${tagQualifier}${buildTime}" }
-
-    if (!branchName.endsWith('release') && !branchName.equals('local')) {
-        return tagsWithQualifier + timestampedTagsWithQualifier
-    }
-    return allTags + timestampedTagsWithQualifier
+    def tagsWithQualifier = allTags.collect { it + getTagQualifier(getBranchName(project)) }
+    return tagsWithQualifier
 }
 
 String getDockerBaseImage(Project p) {
