I-16: Pass 'refs/heads/$BRANCH to gradle

--- a/.github/workflows/scheduled-build.yml
+++ b/.github/workflows/scheduled-build.yml
@@ -17,13 +17,9 @@ jobs:
         with:
           java-version: 11
       - name: 'Build & Test'
-        env:
-          BRANCH_NAME: ${{ matrix.branch }}
-        run: ./gradlew check -PbranchName=$BRANCH_NAME --info
+        run: ./gradlew check -PbranchName=refs/heads/${{ matrix.branch }} --info
       - name: 'Publish docker image'
-        if: ${{ ('master' == matrix.branch) || ('release' == matrix.branch) }}
         env:
-          BRANCH_NAME: ${{ matrix.branch }}
           DOCKER_USER: ${{ secrets.DOCKER_USER }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: ./gradlew pushDockerImage -PbranchName=$BRANCH_NAME --info
+        run: ./gradlew pushDockerImage -PbranchName=refs/heads/${{ matrix.branch }} --info
