DOCKER-376 Rename variable.

--- a/src/main/docker/Dockerfile.centos
+++ b/src/main/docker/Dockerfile.centos
@@ -90,10 +90,10 @@ RUN     env && \
         rpm --erase xmlstarlet && \
 
 	# Configure logging.properties
-        echo "1catalina.org.apache.juli.AsyncFileHandler.maxDays = \${TOMCAT_APPLICATIONLOG_MAXDAYS}" >>${CATALINA_HOME}/conf/logging.properties && \
-        echo "2localhost.org.apache.juli.AsyncFileHandler.maxDays = \${TOMCAT_APPLICATIONLOG_MAXDAYS}" >>${CATALINA_HOME}/conf/logging.properties && \
-        echo "3manager.org.apache.juli.AsyncFileHandler.maxDays = \${TOMCAT_APPLICATIONLOG_MAXDAYS}" >>${CATALINA_HOME}/conf/logging.properties && \
-        echo "4host-manager.org.apache.juli.AsyncFileHandler.maxDays = \${TOMCAT_APPLICATIONLOG_MAXDAYS}" >>${CATALINA_HOME}/conf/logging.properties && \
+        echo "1catalina.org.apache.juli.AsyncFileHandler.maxDays = \${TOMCAT_LOGGING_MAXDAYS}" >>${CATALINA_HOME}/conf/logging.properties && \
+        echo "2localhost.org.apache.juli.AsyncFileHandler.maxDays = \${TOMCAT_LOGGING_MAXDAYS}" >>${CATALINA_HOME}/conf/logging.properties && \
+        echo "3manager.org.apache.juli.AsyncFileHandler.maxDays = \${TOMCAT_LOGGING_MAXDAYS}" >>${CATALINA_HOME}/conf/logging.properties && \
+        echo "4host-manager.org.apache.juli.AsyncFileHandler.maxDays = \${TOMCAT_LOGGING_MAXDAYS}" >>${CATALINA_HOME}/conf/logging.properties && \
 
         # Create a tomcat user
         useradd -r -u 990 --shell /bin/false tomcat && \
