--- a/src/main/docker/Dockerfile.ubuntu
+++ b/src/main/docker/Dockerfile.ubuntu
@@ -82,10 +82,10 @@ RUN     apt-get update && \
         ${CATALINA_HOME}/conf/server.xml && \
 
 	# Configure logging.properties
-        echo "1catalina.org.apache.juli.AsyncFileHandler.maxDays = \${TOMCAT_APPLICATIONLOG_MAXDAYS}" >>${CATALINA_HOME}/conf/logging.properties && \
-        echo "2localhost.org.apache.juli.AsyncFileHandler.maxDays = \${TOMCAT_APPLICATIONLOG_MAXDAYS}" >>${CATALINA_HOME}/conf/logging.properties && \
-        echo "3manager.org.apache.juli.AsyncFileHandler.maxDays = \${TOMCAT_APPLICATIONLOG_MAXDAYS}" >>${CATALINA_HOME}/conf/logging.properties && \
-        echo "4host-manager.org.apache.juli.AsyncFileHandler.maxDays = \${TOMCAT_APPLICATIONLOG_MAXDAYS}" >>${CATALINA_HOME}/conf/logging.properties && \
+        echo "1catalina.org.apache.juli.AsyncFileHandler.maxDays = \${TOMCAT_LOGGING_MAXDAYS}" >>${CATALINA_HOME}/conf/logging.properties && \
+        echo "2localhost.org.apache.juli.AsyncFileHandler.maxDays = \${TOMCAT_LOGGING_MAXDAYS}" >>${CATALINA_HOME}/conf/logging.properties && \
+        echo "3manager.org.apache.juli.AsyncFileHandler.maxDays = \${TOMCAT_LOGGING_MAXDAYS}" >>${CATALINA_HOME}/conf/logging.properties && \
+        echo "4host-manager.org.apache.juli.AsyncFileHandler.maxDays = \${TOMCAT_LOGGING_MAXDAYS}" >>${CATALINA_HOME}/conf/logging.properties && \
 
         # Cleanup webapps stuff
         rm -rf ${CATALINA_HOME}/webapps/* && \
