Use upstream images with unspecified jdk-minor version

--- a/tomcat-7.0/jdk-8-bionic.gradle
+++ b/tomcat-7.0/jdk-8-bionic.gradle
@@ -10,8 +10,7 @@ ext {
     java = [
             flavor : 'jdk',
             version: [
-                    major: 8,
-                    update: 275
+                    major: 8
             ],
             canonical: true
 
