--- a/tomcat-8.5/jdk-11-ubuntu-18.04.gradle
+++ b/tomcat-8.5/jdk-11-ubuntu-18.04.gradle
@@ -10,8 +10,7 @@ ext {
     java = [
             flavor : 'jdk',
             version: [
-                    major: 11,
-                    update: 10
+                    major: 11
             ],
             canonical: true
     ]
