Added Alfresco 7.2 to the tomcat 9 tags

--- a/tomcat-9/jdk-11-ubuntu-20.04.gradle
+++ b/tomcat-9/jdk-11-ubuntu-20.04.gradle
@@ -19,5 +19,5 @@ ext {
             version: '20.04',
             name: 'bionic'
     ]
-    extraTags = [ "alfresco-7.1-ubuntu", "alfresco-7.0-ubuntu" ]
+    extraTags = [ "alfresco-7.2-ubuntu", "alfresco-7.1-ubuntu", "alfresco-7.0-ubuntu" ]
 }
